--- a/Style.css
+++ b/Style.css
@@ -14,7 +14,7 @@ header {
 .title {
     font-size: 3rem;
     font-weight: 700;
-    color: #111111;
+    color: #ffffff;
     margin: 0;
 }
 
@@ -58,3 +58,4 @@ header {
     font-size: 1.2rem;
     line-height: 1.6;
 }
+
